--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,12 @@
 		<dependency>
 			<groupId>com.relevantcodes</groupId>
 			<artifactId>extentreports</artifactId>
-			<version>2.41.1</version>
+			<version>2.41.2</version>
 		</dependency>
+		<dependency>
+    <groupId>xml-apis</groupId>
+    <artifactId>xml-apis</artifactId>
+    <version>2.0.2</version>
+</dependency>
 	</dependencies>
 </project>
